# Superpoint_lightglue_CU12_Deploy

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  check_precision.py  compare_torch_trt.py  inference_image.cpp  inference_sequence.cpp  test_main.cpp
config/: config.yaml
convert2onnx/: convert_lightglue_to_onnx.py  convert_superpoint_to_onnx.py  custom_convert_splg.py  custom_lightglue.py  custom_superpoint.py  image0_superpoint_out.pt  image1_superpoint_out.pt  lightglue.py  superpoint.py  symbolic_shape_infer.py  utils.py
include/: light_glue.h  read_config.h  super_point.h  utils.h
src/: light_glue.cpp  super_point.cpp
weights/: superpoint_v1.engine
